--- a/ILG_Global.Web/wwwroot/Assets/css/site.en.css
+++ b/ILG_Global.Web/wwwroot/Assets/css/site.en.css
@@ -678,6 +678,17 @@ footer .footer-bottom .footer-bottom-row li a {
 
 
 @media (max-width: 991px) {
+    .contact-details, .ilg-to-oppisit-direction{
+        display: none !important;
+    }
+    .navbar .nav-item .nav-link {
+        justify-content: start !important;
+    }
+
+    .navbar .social-container .nav-link {
+        justify-content: center !important;
+    }
+
     .middle-circle img {
         width: 50% !important;
     }
@@ -776,9 +787,7 @@ footer .footer-bottom .footer-bottom-row li a {
 }
 
 @media (max-width: 1600px) {
-    .contact-details{
-        display: none !important;
-    }
+  
     .reversed-footer-col{
         flex-direction: column-reverse !important;
     }
@@ -898,44 +907,49 @@ footer .footer-bottom .footer-bottom-row li a {
 .quick-contact-main-container .quick-contact .left-wing,
 .quick-contact-main-container .quick-contact .center-circle {
     /*  border: solid 1px red;*/
-    height: 200px;
+    height: 126px;
+    cursor: pointer;
 }
 
 .quick-contact-main-container .quick-contact .left-wing {
+    background-size: contain;
     background-image: url(../images/Quick-Call/left-wing.png);
-    width: 36%;
-    /*border: solid 1px green;*/
+    width: 23%;
+    /* border: solid 1px green; */
     background-repeat: no-repeat;
     position: relative;
-    left: 11%;
+    left: 7%;
     background-position-y: -9px;
     z-index: 12;
     /* height: 10px!important; */
-    background-position-x: 9px;
-    background-position-y: -6px;
-    /*border: solid 1px red;*/
+    background-position-x: 5px;
+    background-position-y: -2px;
+    /* border: solid 1px red; */
+    top: -4px;
 }
 
 .quick-contact-main-container .quick-contact .center-circle {
     background-image: url(../images/Quick-Call/quick-call-circle.png);
     background-position-x: 2px !important;
     background-repeat: no-repeat;
-    width: 26.5%;
+    width: 13.5%;
     z-index: 10;
     position: static;
+    background-size: contain;
 }
 
 
 .quick-contact-main-container .quick-contact .right-wing {
     background-image: url(../images/Quick-Call/right-wing.png);
-    background-position-x: -24px;
+    background-position-x: -4px;
     position: relative;
-    left: -145px;
+    left: -7%;
     background-repeat: no-repeat;
-    width: 36%;
-    background-position-y: 61px;
-    /*border: solid 1px blue;*/
+    width: 23%;
+    background-position-y: 41px;
+    /* border: solid 1px blue; */
     z-index: 12;
+    background-size: contain;
 }
 
 .quick-contact-main-container .quick-contact .wings {
@@ -944,24 +958,30 @@ footer .footer-bottom .footer-bottom-row li a {
 
 .quick-contact-main-container .quick-contact .left-wing a.link {
     cursor: pointer;
-    padding: 15px 94px;
-    /*border: solid 1px red;*/
+    padding: 15px 58px;
+    /* border: solid 1px red; */
     position: relative;
-    top: 86px;
+    top: 52px;
     left: -4px;
 }
 
 .quick-contact-main-container .quick-contact .right-wing a.link {
     cursor: pointer;
-    padding: 15px 91px;
-    /*border: solid 1px red;*/
+    padding: 15px 59px;
+    /* border: solid 1px red; */
     position: relative;
-    top: 84px;
-    right: -110px;
+    top: 51px;
+    /* right: -110px; */
+    right: -68px;
 }
 
 .ilg-to-oppisit-direction {
+    /*
     float: right;
+    */
+    display: flex;
+    justify-content: end;
+    padding: 10px;
     position: fixed;
     bottom: 10px;
     right: -4%;
@@ -1404,4 +1424,29 @@ footer .footer-bottom .footer-bottom-row li a {
 #about #about-container .img-container{
     width: 400px;
     height: 500px;
+}
+
+.ilg-to-oppisit-direction{
+    bottom: 0px;
+    -webkit-animation: forwards infinite;
+    -webkit-animation-name: callActionMove;
+    -webkit-animation-duration: 0.5s;
+}
+
+.ilg-to-oppisit-direction:hover{
+    -webkit-animation: none !important;
+    -webkit-animation-name: callActionMove;
+}
+
+@-webkit-keyframes callActionMove {
+    0% {
+        bottom: 0px;
+    }
+    50% {
+        bottom: 5px;
+    }
+    100%{
+        bottom: 0px;
+    }
+
 }
